--- a/src/app/user-information-form/user-information-form.component.html
+++ b/src/app/user-information-form/user-information-form.component.html
@@ -9,7 +9,7 @@
         type="text"
         class="form-control"
         placeholder="Enter your first name"
-        ngModel
+        [(ngModel)]="userInformation.firstName"
       />
 
       <label for="last-name"> Last Name </label>
@@ -19,7 +19,7 @@
         type="text"
         class="form-control"
         placeholder="Enter your last name"
-        ngModel
+        [(ngModel)]="userInformation.lastName"
       />
 
       <label for="cell-number"> Cell Number </label>
@@ -29,7 +29,7 @@
         type="text"
         class="form-control"
         placeholder="Enter your phone number"
-        ngModel
+        [(ngModel)]="userInformation.cellNumber"
       />
       <!-- <div class="form-group">
         <label for="gender"> Gender </label>
@@ -46,7 +46,7 @@
         type="text"
         class="form-control"
         placeholder="Enter your a-number"
-        ngModel
+        [(ngModel)]="userInformation.aNumber"
       />
 
       <label for="email"> Email </label>
@@ -56,7 +56,7 @@
         type="email"
         class="form-control"
         placeholder="Enter your email adress"
-        ngModel
+        [(ngModel)]="userInformation.email"
       />
 
       <label for="password">Password</label>
@@ -66,7 +66,6 @@
         class="form-control"
         id="password"
         placeholder="* * * * * * * *"
-        ngModel
       />
       <small> Password should be at least 8 characters long .</small>
       <div class="information-security-note">
@@ -76,4 +75,4 @@
     <button class="btn btn-primary">Submit</button>
   </form>
 </div>
-{{ form.value | json }}
+{{ userInformation | json }}
