--- a/src/app/user-information-form/user-information-form.component.html
+++ b/src/app/user-information-form/user-information-form.component.html
@@ -75,4 +75,4 @@
     <button class="btn btn-primary">Submit</button>
   </form>
 </div>
-{{ userInformation | json }}
+{{ originalUserInformation | json }}
