fix submit button

--- a/src/app/user-information-form/user-information-form.component.html
+++ b/src/app/user-information-form/user-information-form.component.html
@@ -120,7 +120,7 @@
     <div class="information-security-note">
       Your information will be managed securely
     </div>
-    <button [disabled]="form.invalid" class="btn btn-primary">Submit</button>
+    <button [disabled]="form.invalid" class="btn btn-success btn-lg btn-block">Submit</button>
   </form>
 </div>
 <h1>Data Submitted. Thank You!</h1>
