--- a/src/app/user-information-form/user-information-form.component.css
+++ b/src/app/user-information-form/user-information-form.component.css
@@ -26,4 +26,10 @@
 .closebtn:hover {
   color: black;
 }
-
+h2 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
+  text-align: center;
+  font-weight: bold;
+}
