--- a/src/app/user-information-form/user-information-form.component.html
+++ b/src/app/user-information-form/user-information-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: bold; text-align: center ;">User Information</h2>
+  <h2>User Information</h2>
   <form
     #form="ngForm"
     *ngIf="!submitted"
